# agentic_context_management

./: .env.example  .gitignore  EXTENSION_PLAN.md  Future.md  PROJECT.md  README.md  api.py  architecture.md  docker-compose.yml  main.py  matrix.md  package-lock.json  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  claude-review.yml  publish-pypi.yml  publish-vscode.yml
backend/: .env.example  agent_callbacks.py  api.py  cancel_registry.py  context_editing.py  context_profiles.py  dump_visual_images.py  event_bus.py  github_client.py  mcp_catalog.json  mcp_client.py  mcp_security.py  plugin_tools.py  plugins_catalog.py  requirements.txt  routes_context_profiles.py  routes_demo.py  routes_mcp.py  routes_plugins.py  routes_providers.py  routes_skills.py  sandbox_client.py  skills_catalog.py  skills_manifest.json  storage.py  subagent.py  tool_call_recovery.py  ts_code_mode.py  ts_code_mode_registry.py  ts_code_mode_rpc.py  ts_code_mode_runner.py
backend/Tools/: __init__.py  _paths.py  calculator_tool.py  delegate_tool.py  describe_tools_tool.py  execute_typescript_tool.py  jit_tools.py  list_files_tool.py  memory_tool.py  read_file_tool.py  shell_tool.py  use_skill_tool.py  weather_tool.py  write_file_tool.py
backend/providers/: __init__.py  anthropic.py  azure.py  base.py  bedrock.py  google.py  openai.py  openrouter.py  registry.py
backend/training/: _dataset.py  train_encoder.py  train_judge.py
backend/visual_tool/: __init__.py  auxiliary_llm.py  compressor.py  indexer.py  rasterizer.py  templates.py  wrap_tools.py
db/: init.sql
extension/: .gitignore  PACKAGING.md  PRIVATE_DEPLOY.md  README.md  TESTING.md  pyproject.toml
extension/acm_engine/: __init__.py
extension/acm_engine/_vendor/: cache_layout.py  context_editing.py  context_profiles.py  relevance.py  relevance_encoder.py
extension/acm_engine/_vendor/visual_tool/: __init__.py  rasterizer.py
extension/acm_gateway/: __init__.py  __main__.py  app.py  budgets.py  config.py  context_windows.py  droplist.py  events.py  paths.py  pipeline.py  pricing.py  providers_store.py  savings.py  timeline.py  training_export.py  translate.py  translate_anthropic.py  upstream.py  usage.py  visualizer.py
extension/acm_mcp/: __init__.py  jit.py  memory_store.py  server.py
extension/adapters/claude-code/: .mcp.json  README.md  settings.template.json
extension/adapters/claude-code/.claude-plugin/: plugin.json
extension/adapters/claude-code/commands/: acm-status.md
extension/adapters/claude-code/hooks/: hooks.json  post_tool_use.py  user_prompt_submit.py
extension/adapters/cursor/: README.md  hooks.json  mcp.json
extension/adapters/cursor/hooks/: _common.py  after_file_edit.py  before_shell_execution.py  before_submit_prompt.py  stop.py
extension/adapters/vscode/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  UI_PLAN.md  esbuild.mjs  mcp.json  package-lock.json  package.json  tsconfig.json  tsconfig.ui.json
extension/adapters/vscode/media/: make_icon.py  make_logo.py
extension/adapters/vscode/src/: acmClient.ts  bootstrap.ts  claudeRouting.ts  extension.ts  gateway.ts  settingsPanel.ts  tools.ts  webview.ts
extension/adapters/vscode/src/ui/: App.tsx  Onboarding.tsx  bridge.ts  index.tsx  styles.css  vscode.d.ts
extension/config/: acm.config.example.json
extension/scripts/: e2e_relevance.py  session_key_test.py  smoke.sh  sync_engine.py  wire_test.py
keycloak/: realm-export.json
sandbox/: Dockerfile  build.sh  diagnose_model.py  smoke_test.py  test_chat_flow.py  test_file_tools.py
ui/: .env.local.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/app/: page.tsx
ui/app/app/mcps/: page.tsx
ui/app/app/plugins/: page.tsx
ui/app/app/providers/: page.tsx
ui/app/app/settings/: page.tsx
ui/app/app/skills/: page.tsx
ui/app/login/: page.tsx
ui/components/: context-profiles.tsx  mcp-brand-icons.ts  mcp-icons.tsx  mcp-inventory.tsx  plugins-inventory.tsx  relevance-cleanup.tsx  skills-inventory.tsx  strategy-demo.tsx
ui/lib/: auth.ts  supabase.ts  theme.ts
ui/scripts/: gen-mcp-icons.py
